src/grammar/ShellGrammarParser.py
# Generated from src/grammar/ShellGrammar.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class ShellGrammarParser(Parser):
    grammarFileName = "ShellGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'<'",
        "'>'",
        "<INVALID>",
        "';'",
        "'|'",
        "'\\n'",
        "'''",
        "'\"'",
        "'`'",
    ]

    symbolicNames = [
        "<INVALID>",
        "LESS_THAN",
        "GREATER_THAN",
        "WHITESPACE",
        "SEMICOLON",
        "PIPE",
        "NEWLINE",
        "SINGLE_QUOTE",
        "DOUBLE_QUOTE",
        "BACK_QUOTE",
        "UNQUOTED",
    ]

    RULE_command = 0
    RULE_pipe = 1
    RULE_seq = 2
    RULE_call = 3
    RULE_argument = 4
    RULE_atom = 5
    RULE_quoted = 6
    RULE_single_quoted = 7
    RULE_back_quoted = 8
    RULE_double_quoted = 9
    RULE_redirection = 10

    ruleNames = [
        "command",
        "pipe",
        "seq",
        "call",
        "argument",
        "atom",
        "quoted",
        "single_quoted",
        "back_quoted",
        "double_quoted",
        "redirection",
    ]

    EOF = Token.EOF
    LESS_THAN = 1
    GREATER_THAN = 2
    WHITESPACE = 3
    SEMICOLON = 4
    PIPE = 5
    NEWLINE = 6
    SINGLE_QUOTE = 7
    DOUBLE_QUOTE = 8
    BACK_QUOTE = 9
    UNQUOTED = 10

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class CommandContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ShellGrammarParser.EOF, 0)

        def pipe(self):
            return self.getTypedRuleContext(ShellGrammarParser.PipeContext, 0)

        def seq(self):
            return self.getTypedRuleContext(ShellGrammarParser.SeqContext, 0)

        def call(self):
            return self.getTypedRuleContext(ShellGrammarParser.CallContext, 0)

        def getRuleIndex(self):
            return ShellGrammarParser.RULE_command

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCommand"):
                return visitor.visitCommand(self)
            else:
                return visitor.visitChildren(self)

    def command(self):
        localctx = ShellGrammarParser.CommandContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_command)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
            if la_ == 1:
                self.state = 22
                self.pipe()

            elif la_ == 2:
                self.state = 23
                self.seq()

            elif la_ == 3:
                self.state = 24
                self.call()

            self.state = 27
            self.match(ShellGrammarParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PipeContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def call(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ShellGrammarParser.CallContext)
            else:
                return self.getTypedRuleContext(ShellGrammarParser.CallContext, i)

        def PIPE(self):
            return self.getToken(ShellGrammarParser.PIPE, 0)

        def pipe(self):
            return self.getTypedRuleContext(ShellGrammarParser.PipeContext, 0)

        def getRuleIndex(self):
            return ShellGrammarParser.RULE_pipe

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPipe"):
                return visitor.visitPipe(self)
            else:
                return visitor.visitChildren(self)

    def pipe(self):
        localctx = ShellGrammarParser.PipeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_pipe)
        try:
            self.state = 37
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 1, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 29
                self.call()
                self.state = 30
                self.match(ShellGrammarParser.PIPE)
                self.state = 31
                self.call()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 33
                self.call()
                self.state = 34
                self.match(ShellGrammarParser.PIPE)
                self.state = 35
                self.pipe()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SeqContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMICOLON(self):
            return self.getToken(ShellGrammarParser.SEMICOLON, 0)

        def pipe(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ShellGrammarParser.PipeContext)
            else:
                return self.getTypedRuleContext(ShellGrammarParser.PipeContext, i)

        def call(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ShellGrammarParser.CallContext)
            else:
                return self.getTypedRuleContext(ShellGrammarParser.CallContext, i)

        def seq(self):
            return self.getTypedRuleContext(ShellGrammarParser.SeqContext, 0)

        def getRuleIndex(self):
            return ShellGrammarParser.RULE_seq

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSeq"):
                return visitor.visitSeq(self)
            else:
                return visitor.visitChildren(self)

    def seq(self):
        localctx = ShellGrammarParser.SeqContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_seq)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
            if la_ == 1:
                self.state = 39
                self.pipe()
                pass

            elif la_ == 2:
                self.state = 40
                self.call()
                pass

            self.state = 43
            self.match(ShellGrammarParser.SEMICOLON)
            self.state = 47
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 3, self._ctx)
            if la_ == 1:
                self.state = 44
                self.pipe()
                pass

            elif la_ == 2:
                self.state = 45
                self.seq()
                pass

            elif la_ == 3:
                self.state = 46
                self.call()
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class CallContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argument(self):
            return self.getTypedRuleContext(ShellGrammarParser.ArgumentContext, 0)

        def WHITESPACE(self, i: int = None):
            if i is None:
                return self.getTokens(ShellGrammarParser.WHITESPACE)
            else:
                return self.getToken(ShellGrammarParser.WHITESPACE, i)

        def redirection(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ShellGrammarParser.RedirectionContext)
            else:
                return self.getTypedRuleContext(
                    ShellGrammarParser.RedirectionContext, i
                )

        def atom(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ShellGrammarParser.AtomContext)
            else:
                return self.getTypedRuleContext(ShellGrammarParser.AtomContext, i)

        def getRuleIndex(self):
            return ShellGrammarParser.RULE_call

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitCall"):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)

    def call(self):
        localctx = ShellGrammarParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_call)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 3:
                self.state = 49
                self.match(ShellGrammarParser.WHITESPACE)
                self.state = 54
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 1 or _la == 2:
                self.state = 55
                self.redirection()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 3:
                    self.state = 56
                    self.match(ShellGrammarParser.WHITESPACE)
                    self.state = 61
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self.argument()
            self.state = 77
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 8, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 71
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la == 3:
                        self.state = 68
                        self.match(ShellGrammarParser.WHITESPACE)
                        self.state = 73
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 74
                    self.atom()
                self.state = 79
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 8, self._ctx)

            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == 3:
                self.state = 80
                self.match(ShellGrammarParser.WHITESPACE)
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def quoted(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ShellGrammarParser.QuotedContext)
            else:
                return self.getTypedRuleContext(ShellGrammarParser.QuotedContext, i)

        def UNQUOTED(self, i: int = None):
            if i is None:
                return self.getTokens(ShellGrammarParser.UNQUOTED)
            else:
                return self.getToken(ShellGrammarParser.UNQUOTED, i)

        def getRuleIndex(self):
            return ShellGrammarParser.RULE_argument

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitArgument"):
                return visitor.visitArgument(self)
            else:
                return visitor.visitChildren(self)

    def argument(self):
        localctx = ShellGrammarParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_argument)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self._errHandler.sync(self)
            _alt = 1
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 88
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [7, 8, 9]:
                        self.state = 86
                        self.quoted()
                        pass
                    elif token in [10]:
                        self.state = 87
                        self.match(ShellGrammarParser.UNQUOTED)
                        pass
                    else:
                        raise NoViableAltException(self)

                else:
                    raise NoViableAltException(self)
                self.state = 90
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 11, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AtomContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def redirection(self):
            return self.getTypedRuleContext(ShellGrammarParser.RedirectionContext, 0)

        def argument(self):
            return self.getTypedRuleContext(ShellGrammarParser.ArgumentContext, 0)

        def getRuleIndex(self):
            return ShellGrammarParser.RULE_atom

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAtom"):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)

    def atom(self):
        localctx = ShellGrammarParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_atom)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.redirection()
                pass
            elif token in [7, 8, 9, 10]:
                self.enterOuterAlt(localctx, 2)
                self.state = 93
                self.argument()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class QuotedContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def single_quoted(self):
            return self.getTypedRuleContext(ShellGrammarParser.Single_quotedContext, 0)

        def double_quoted(self):
            return self.getTypedRuleContext(ShellGrammarParser.Double_quotedContext, 0)

        def back_quoted(self):
            return self.getTypedRuleContext(ShellGrammarParser.Back_quotedContext, 0)

        def getRuleIndex(self):
            return ShellGrammarParser.RULE_quoted

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitQuoted"):
                return visitor.visitQuoted(self)
            else:
                return visitor.visitChildren(self)

    def quoted(self):
        localctx = ShellGrammarParser.QuotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_quoted)
        try:
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.single_quoted()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.double_quoted()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 98
                self.back_quoted()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Single_quotedContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SINGLE_QUOTE(self, i: int = None):
            if i is None:
                return self.getTokens(ShellGrammarParser.SINGLE_QUOTE)
            else:
                return self.getToken(ShellGrammarParser.SINGLE_QUOTE, i)

        def NEWLINE(self, i: int = None):
            if i is None:
                return self.getTokens(ShellGrammarParser.NEWLINE)
            else:
                return self.getToken(ShellGrammarParser.NEWLINE, i)

        def getRuleIndex(self):
            return ShellGrammarParser.RULE_single_quoted

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSingle_quoted"):
                return visitor.visitSingle_quoted(self)
            else:
                return visitor.visitChildren(self)

    def single_quoted(self):
        localctx = ShellGrammarParser.Single_quotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_single_quoted)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(ShellGrammarParser.SINGLE_QUOTE)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 1854) != 0:
                self.state = 102
                _la = self._input.LA(1)
                if _la <= 0 or _la == 6 or _la == 7:
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(ShellGrammarParser.SINGLE_QUOTE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Back_quotedContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BACK_QUOTE(self, i: int = None):
            if i is None:
                return self.getTokens(ShellGrammarParser.BACK_QUOTE)
            else:
                return self.getToken(ShellGrammarParser.BACK_QUOTE, i)

        def NEWLINE(self, i: int = None):
            if i is None:
                return self.getTokens(ShellGrammarParser.NEWLINE)
            else:
                return self.getToken(ShellGrammarParser.NEWLINE, i)

        def getRuleIndex(self):
            return ShellGrammarParser.RULE_back_quoted

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitBack_quoted"):
                return visitor.visitBack_quoted(self)
            else:
                return visitor.visitChildren(self)

    def back_quoted(self):
        localctx = ShellGrammarParser.Back_quotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_back_quoted)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(ShellGrammarParser.BACK_QUOTE)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 1470) != 0:
                self.state = 111
                _la = self._input.LA(1)
                if _la <= 0 or _la == 6 or _la == 9:
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(ShellGrammarParser.BACK_QUOTE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Double_quotedContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOUBLE_QUOTE(self, i: int = None):
            if i is None:
                return self.getTokens(ShellGrammarParser.DOUBLE_QUOTE)
            else:
                return self.getToken(ShellGrammarParser.DOUBLE_QUOTE, i)

        def back_quoted(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(ShellGrammarParser.Back_quotedContext)
            else:
                return self.getTypedRuleContext(
                    ShellGrammarParser.Back_quotedContext, i
                )

        def NEWLINE(self, i: int = None):
            if i is None:
                return self.getTokens(ShellGrammarParser.NEWLINE)
            else:
                return self.getToken(ShellGrammarParser.NEWLINE, i)

        def BACK_QUOTE(self, i: int = None):
            if i is None:
                return self.getTokens(ShellGrammarParser.BACK_QUOTE)
            else:
                return self.getToken(ShellGrammarParser.BACK_QUOTE, i)

        def getRuleIndex(self):
            return ShellGrammarParser.RULE_double_quoted

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDouble_quoted"):
                return visitor.visitDouble_quoted(self)
            else:
                return visitor.visitChildren(self)

    def double_quoted(self):
        localctx = ShellGrammarParser.Double_quotedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_double_quoted)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(ShellGrammarParser.DOUBLE_QUOTE)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while ((_la) & ~0x3F) == 0 and ((1 << _la) & 1726) != 0:
                self.state = 122
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [9]:
                    self.state = 120
                    self.back_quoted()
                    pass
                elif token in [1, 2, 3, 4, 5, 7, 10]:
                    self.state = 121
                    _la = self._input.LA(1)
                    if _la <= 0 or ((_la) & ~0x3F) == 0 and ((1 << _la) & 832) != 0:
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 126
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self.match(ShellGrammarParser.DOUBLE_QUOTE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RedirectionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LESS_THAN(self):
            return self.getToken(ShellGrammarParser.LESS_THAN, 0)

        def argument(self):
            return self.getTypedRuleContext(ShellGrammarParser.ArgumentContext, 0)

        def WHITESPACE(self, i: int = None):
            if i is None:
                return self.getTokens(ShellGrammarParser.WHITESPACE)
            else:
                return self.getToken(ShellGrammarParser.WHITESPACE, i)

        def GREATER_THAN(self):
            return self.getToken(ShellGrammarParser.GREATER_THAN, 0)

        def getRuleIndex(self):
            return ShellGrammarParser.RULE_redirection

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRedirection"):
                return visitor.visitRedirection(self)
            else:
                return visitor.visitChildren(self)

    def redirection(self):
        localctx = ShellGrammarParser.RedirectionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_redirection)
        self._la = 0  # Token type
        try:
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(ShellGrammarParser.LESS_THAN)
                self.state = 133
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 3:
                    self.state = 130
                    self.match(ShellGrammarParser.WHITESPACE)
                    self.state = 135
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 136
                self.argument()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.match(ShellGrammarParser.GREATER_THAN)
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la == 3:
                    self.state = 138
                    self.match(ShellGrammarParser.WHITESPACE)
                    self.state = 143
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 144
                self.argument()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
